name: ltk
version: 0.16.0.0
cabal-version: >=1.8
build-type: Simple
license: GPL
license-file: LICENSE
copyright: Juergen "jutaro" Nicklisch-Franken
maintainer: maintainer@leksah.org
homepage: http://www.leksah.org
package-url: http://code.haskell.org/ltk
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Leksah tool kit
description:
    UI Framework used by leksah
category: GUI
author: Juergen "jutaro" Nicklisch-Franken
tested-with: GHC ==6.10 || ==6.12 || ==7.0

source-repository head
    type: git
    location: https://github.com/leksah/ltk

library
    exposed-modules:
        Default
        Control.Event
        Graphics.UI.Editor.Basics
        Graphics.UI.Editor.Composite
        Graphics.UI.Editor.DescriptionPP
        Graphics.UI.Editor.MakeEditor
        Graphics.UI.Editor.Parameters
        Graphics.UI.Editor.Simple
        Graphics.UI.Frame.Panes
        Graphics.UI.Frame.Rectangle
        Graphics.UI.Frame.ViewFrame
        Text.PrinterParser
        MyMissing
    build-depends:
        Cabal >=1.6.0 && <1.25,
        base >=4.0.0.0 && <4.10,
        base-compat >=0.9.0 && <0.10,
        containers >=0.2 && <0.6,
        filepath >=1.1.0 && <1.5,
        text >=0.11.0.6 && <1.3,
        mtl >=1.1.0.2 && <2.3,
        parsec >=2.1.0.1 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        transformers >=0.2.2.0 && <0.6,
        ghc -any,
        haskell-gi-base >=0.17 && <0.18,
        gi-glib >=2.0.2 && <2.1,
        gi-gobject >=2.0.2 && <2.1,
        gi-cairo >=1.0.2 && <1.1,
        gi-gdk >=3.0.2 && <3.1,
        gi-gtk >=3.0.2 && <3.1,
        gi-gtk-hs >=0.2.0.0 && <0.3
    hs-source-dirs: src
