name: ltk
version: 0.16.2.0
cabal-version: >=1.24
build-type: Simple
license: GPL
license-file: LICENSE
copyright: Juergen "jutaro" Nicklisch-Franken
maintainer: maintainer@leksah.org
homepage: http://www.leksah.org
package-url: http://code.haskell.org/ltk
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Leksah tool kit
description:
    UI Framework used by leksah
category: GUI
author: Juergen "jutaro" Nicklisch-Franken
tested-with: GHC ==8.2.1 || ==8.0.2

source-repository head
    type: git
    location: https://github.com/leksah/ltk

flag gtk-320
    description:
        GTK+ is 3.20 or later

flag check-gtk-version
    description:
        This flag can be used to disable the pkgconfig-depends
        as they can cause problems on macOS when using nix.
    manual: True
    default: True

library

    if !impl(ghcjs -any)
        build-depends:
            ghc -any

    if flag(check-gtk-version)

        if flag(gtk-320)
            cpp-options: -DMIN_VERSION_GTK_3_20
            pkgconfig-depends: gtk+-3.0 >=3.20
        else
            pkgconfig-depends: gdk-3.0 <3.20
    else
        cpp-options: -DMIN_VERSION_GTK_3_20
    exposed-modules:
        Control.Event
        Graphics.UI.Editor.Basics
        Graphics.UI.Editor.Composite
        Graphics.UI.Editor.DescriptionPP
        Graphics.UI.Editor.MakeEditor
        Graphics.UI.Editor.Parameters
        Graphics.UI.Editor.Simple
        Graphics.UI.Frame.Panes
        Graphics.UI.Frame.Rectangle
        Graphics.UI.Frame.ViewFrame
        Graphics.UI.Utils
    build-depends:
        Cabal >=2 && <2.5,
        base >=4.0.0.0 && <4.13,
        base-compat >=0.10.0 && <0.11,
        containers >=0.2 && <0.7,
        data-default >=0.7.1.1 && <0.8,
        filepath >=1.1.0 && <1.5,
        text >=0.11.0.6 && <1.3,
        mtl >=1.1.0.2 && <2.3,
        parsec >=2.1.0.1 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        transformers >=0.2.2.0 && <0.6,
        haskell-gi-base >=0.21.2 && <0.24,
        gi-glib >=2.0.6 && <2.1,
        gi-gobject >=2.0.6 && <2.1,
        gi-cairo >=1.0.6 && <1.1,
        gi-gdk >=3.0.6 && <3.1,
        gi-gtk >=3.0.25 && <3.1,
        gi-gtk-hs >=0.3.6.2 && <0.4,
        gi-pango >=1.0.6 && <1.1,
        haskell-gi-overloading ==0.0.*,
        lens >=4.15.4 && <4.18,
        aeson >=1.1.2.0 && <1.5
    hs-source-dirs: src

