cabal-version: 1.24
name: ltk
version: 0.16.2.0
build-type: Simple
license: GPL
license-file: LICENSE
copyright: Juergen "jutaro" Nicklisch-Franken
maintainer: maintainer@leksah.org
homepage: http://www.leksah.org
package-url: http://code.haskell.org/ltk
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Leksah tool kit
description:
    UI Framework used by leksah
category: GUI
author: Juergen "jutaro" Nicklisch-Franken
tested-with: GHC ==8.2.1 || ==8.0.2

source-repository head
    type: git
    location: https://github.com/leksah/ltk

library

    if !impl(ghcjs -any)
        build-depends:
            ghc -any

    exposed-modules:
        Control.Event
        Graphics.UI.Editor.Basics
        Graphics.UI.Editor.Composite
        Graphics.UI.Editor.DescriptionPP
        Graphics.UI.Editor.MakeEditor
        Graphics.UI.Editor.Parameters
        Graphics.UI.Editor.Simple
        Graphics.UI.Frame.Panes
        Graphics.UI.Frame.Rectangle
        Graphics.UI.Frame.ViewFrame
        Graphics.UI.Utils
    build-depends:
        Cabal >=2 && <3.3,
        base >=4.0.0.0 && <4.15,
        base-compat >=0.10.0 && <0.12,
        containers >=0.2 && <0.7,
        data-default >=0.7.1.1 && <0.8,
        filepath >=1.1.0 && <1.5,
        text >=0.11.0.6 && <1.3,
        mtl >=1.1.0.2 && <2.3,
        parsec >=2.1.0.1 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        transformers >=0.2.2.0 && <0.6,
        haskell-gi-base >=0.21.2 && <0.26,
        gi-glib >=2.0.6 && <2.1,
        gi-gobject >=2.0.6 && <2.1,
        gi-cairo >=1.0.6 && <1.1,
        gi-gdk >=3.0.6 && <3.1,
        gi-gtk >=3.0.25 && <3.1,
        gi-gtk-hs >=0.3.6.2 && <0.4,
        gi-pango >=1.0.6 && <1.1,
        haskell-gi-overloading ==0.0.*,
        lens >=4.15.4 && <4.20,
        aeson >=1.1.2.0 && <1.6
    hs-source-dirs: src

